--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon app.js",
+    "build":"npm i"
   },
   "author": "Aditya Joshi",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.0", 
     "body-parser": "^1.20.2",
     "capture-video-frame": "^1.0.0",
     "cloudinary": "^1.37.2",
