--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev":"nodemon app.js",
-    "build":"npm i"
+    "dev": "nodemon app.js",
+    "build": "npm i"
   },
   "author": "Aditya Joshi",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0", 
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "capture-video-frame": "^1.0.0",
     "cloudinary": "^1.37.2",
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1"
   }
 }
